--- a/css/main.css
+++ b/css/main.css
@@ -152,13 +152,18 @@ main section{
 }
 
 .gallery .images{
+    position: relative;
     width:940px;
     margin:20px auto;
     padding:10px;
     border:#999 2px solid;
+    height: 720px;
 }
 
 .gallery .images img{
+    position: absolute;
+    top: 10;
+    left:10;
 }
 
 .gallery .thumbs{
@@ -172,6 +177,7 @@ main section{
     border:#666666 2px solid;
     margin:4px;
     width:69px;
+    opacity: .65;
 }
 
 .gallery .thumbs img.selected{
@@ -180,6 +186,7 @@ main section{
 
 .gallery .thumbs img:hover{
     cursor:pointer;
+    opacity: 1;
 }
 
 .gallery .prev-btn,
